Improve resource access using importlib.resources
- Rename 'template' directory to 'templates' and make it a proper Python package
- Replace Path(__file__) with importlib.resources for template file access
- Update both init and new commands to use the resource-based approach
- Improve compatibility with different package installation methods
- Follow Python best practices for accessing packaged resources

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -31,3 +31,5 @@
 - Updated init command to use the Environment class for generating default configuration
 - Enhanced Environment.load() to handle path-specific configuration parameters
 - Extracted hardcoded templates from init.py to external files in template/init directory
+- Switched from using Path(__file__) to importlib.resources for accessing template files
+- Renamed 'template' directory to 'templates' and made it a proper Python package
